// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConnectionEvent renders correctly for disconnect event 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__PopoverWrapper-sc-hmshlr-10 hvDant"
  >
    <span
      class="ant-popover-open"
    >
      test
      <div
        style="position: absolute; top: 0px; left: 0px; width: 100%;"
      >
        <div>
          <div
            class="ant-popover"
            style="opacity: 0;"
          >
            <div
              class="ant-popover-content"
            >
              <div
                class="ant-popover-arrow"
              >
                <span
                  class="ant-popover-arrow-content"
                />
              </div>
              <div
                class="ant-popover-inner"
                role="tooltip"
              >
                <div
                  class="ant-popover-inner-content"
                >
                  <h3
                    class="sc-bczRLJ bcJKaK"
                  >
                    Connection Event Details
                  </h3>
                  <dl
                    class="sc-gsnTZi iLOyRZ"
                  >
                    <dt
                      class="sc-dkzDqf kVNeuV"
                    >
                      AP MAC:
                    </dt>
                    <dd
                      class="sc-hKMtZM iWLUww"
                    >
                      94:B3:4F:3D:15:B0
                    </dd>
                    <dt
                      class="sc-dkzDqf kVNeuV"
                    >
                      AP Name:
                    </dt>
                    <dd
                      class="sc-hKMtZM iWLUww"
                    >
                      R750-11-112
                    </dd>
                    <dt
                      class="sc-dkzDqf kVNeuV"
                    >
                      SSID:
                    </dt>
                    <dd
                      class="sc-hKMtZM iWLUww"
                    />
                    <dt
                      class="sc-dkzDqf kVNeuV"
                    >
                      Radio:
                    </dt>
                    <dd
                      class="sc-hKMtZM iWLUww"
                    >
                      5 GHz
                    </dd>
                    <dt
                      class="sc-dkzDqf kVNeuV"
                    >
                      Reason:
                    </dt>
                    <dd
                      class="sc-hKMtZM iWLUww"
                    >
                      Client disconnected
                    </dd>
                  </dl>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </span>
  </div>
</DocumentFragment>
`;

exports[`ConnectionEvent renders correctly for failureEvent event 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__PopoverWrapper-sc-hmshlr-10 hvDant"
  >
    <span
      class="ant-popover-open"
    >
      test
      <div
        style="position: absolute; top: 0px; left: 0px; width: 100%;"
      >
        <div>
          <div
            class="ant-popover"
            style="opacity: 0;"
          >
            <div
              class="ant-popover-content"
            >
              <div
                class="ant-popover-arrow"
              >
                <span
                  class="ant-popover-arrow-content"
                />
              </div>
              <div
                class="ant-popover-inner"
                role="tooltip"
              >
                <div
                  class="ant-popover-inner-content"
                >
                  <h3
                    class="sc-bczRLJ bcJKaK"
                  >
                    Connection Event Details
                  </h3>
                  <dl
                    class="sc-gsnTZi iLOyRZ"
                  >
                    <dt
                      class="sc-dkzDqf kVNeuV"
                    >
                      AP MAC:
                    </dt>
                    <dd
                      class="sc-hKMtZM iWLUww"
                    >
                      AA:AA:AA:AA:AA:AA
                    </dd>
                    <dt
                      class="sc-dkzDqf kVNeuV"
                    >
                      AP Name:
                    </dt>
                    <dd
                      class="sc-hKMtZM iWLUww"
                    >
                      R750-11-112
                    </dd>
                    <dt
                      class="sc-dkzDqf kVNeuV"
                    >
                      SSID:
                    </dt>
                    <dd
                      class="sc-hKMtZM iWLUww"
                    />
                    <dt
                      class="sc-dkzDqf kVNeuV"
                    >
                      Radio:
                    </dt>
                    <dd
                      class="sc-hKMtZM iWLUww"
                    >
                      5 GHz
                    </dd>
                    <dt
                      class="sc-dkzDqf kVNeuV"
                    >
                      Failure Type:
                    </dt>
                    <dd
                      class="sc-hKMtZM iWLUww"
                    >
                      EAPOL Failures
                    </dd>
                    <dt
                      class="sc-dkzDqf kVNeuV"
                    >
                      Reason:
                    </dt>
                    <dd
                      class="sc-hKMtZM iWLUww"
                    >
                      PSK Failure (passphrase mismatch) - Invalid MIC
                    </dd>
                  </dl>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </span>
  </div>
</DocumentFragment>
`;

exports[`ConnectionEvent renders correctly for slow event 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__PopoverWrapper-sc-hmshlr-10 hvDant"
  >
    <span
      class="ant-popover-open"
    >
      test
      <div
        style="position: absolute; top: 0px; left: 0px; width: 100%;"
      >
        <div>
          <div
            class="ant-popover"
            style="opacity: 0;"
          >
            <div
              class="ant-popover-content"
            >
              <div
                class="ant-popover-arrow"
              >
                <span
                  class="ant-popover-arrow-content"
                />
              </div>
              <div
                class="ant-popover-inner"
                role="tooltip"
              >
                <div
                  class="ant-popover-inner-content"
                >
                  <h3
                    class="sc-bczRLJ bcJKaK"
                  >
                    Connection Event Details
                  </h3>
                  <dl
                    class="sc-gsnTZi iLOyRZ"
                  >
                    <dt
                      class="sc-dkzDqf kVNeuV"
                    >
                      AP MAC:
                    </dt>
                    <dd
                      class="sc-hKMtZM iWLUww"
                    >
                      94:B3:4F:3D:15:B0
                    </dd>
                    <dt
                      class="sc-dkzDqf kVNeuV"
                    >
                      AP Name:
                    </dt>
                    <dd
                      class="sc-hKMtZM iWLUww"
                    >
                      R750-11-112
                    </dd>
                    <dt
                      class="sc-dkzDqf kVNeuV"
                    >
                      SSID:
                    </dt>
                    <dd
                      class="sc-hKMtZM iWLUww"
                    />
                    <dt
                      class="sc-dkzDqf kVNeuV"
                    >
                      Radio:
                    </dt>
                    <dd
                      class="sc-hKMtZM iWLUww"
                    >
                      5 GHz
                    </dd>
                    <dt
                      class="sc-dkzDqf kVNeuV"
                    >
                      Time to Connect:
                    </dt>
                    <dd
                      class="sc-hKMtZM iWLUww"
                    >
                      1 s
                    </dd>
                  </dl>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </span>
  </div>
</DocumentFragment>
`;

exports[`ConnectionEvent renders correctly for success event 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__PopoverWrapper-sc-hmshlr-10 hvDant"
  >
    <span
      class="ant-popover-open"
    >
      test
      <div
        style="position: absolute; top: 0px; left: 0px; width: 100%;"
      >
        <div>
          <div
            class="ant-popover"
            style="opacity: 0;"
          >
            <div
              class="ant-popover-content"
            >
              <div
                class="ant-popover-arrow"
              >
                <span
                  class="ant-popover-arrow-content"
                />
              </div>
              <div
                class="ant-popover-inner"
                role="tooltip"
              >
                <div
                  class="ant-popover-inner-content"
                >
                  <h3
                    class="sc-bczRLJ bcJKaK"
                  >
                    Connection Event Details
                  </h3>
                  <dl
                    class="sc-gsnTZi iLOyRZ"
                  >
                    <dt
                      class="sc-dkzDqf kVNeuV"
                    >
                      AP MAC:
                    </dt>
                    <dd
                      class="sc-hKMtZM iWLUww"
                    >
                      94:B3:4F:3D:15:B0
                    </dd>
                    <dt
                      class="sc-dkzDqf kVNeuV"
                    >
                      AP Name:
                    </dt>
                    <dd
                      class="sc-hKMtZM iWLUww"
                    >
                      R750-11-112
                    </dd>
                    <dt
                      class="sc-dkzDqf kVNeuV"
                    >
                      SSID:
                    </dt>
                    <dd
                      class="sc-hKMtZM iWLUww"
                    />
                    <dt
                      class="sc-dkzDqf kVNeuV"
                    >
                      Radio:
                    </dt>
                    <dd
                      class="sc-hKMtZM iWLUww"
                    >
                      5 GHz
                    </dd>
                  </dl>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </span>
  </div>
</DocumentFragment>
`;

exports[`ConnectionEvent renders correctly for unknown radio 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__PopoverWrapper-sc-hmshlr-10 hvDant"
  >
    <span
      class="ant-popover-open"
    >
      test
      <div
        style="position: absolute; top: 0px; left: 0px; width: 100%;"
      >
        <div>
          <div
            class="ant-popover"
            style="opacity: 0;"
          >
            <div
              class="ant-popover-content"
            >
              <div
                class="ant-popover-arrow"
              >
                <span
                  class="ant-popover-arrow-content"
                />
              </div>
              <div
                class="ant-popover-inner"
                role="tooltip"
              >
                <div
                  class="ant-popover-inner-content"
                >
                  <h3
                    class="sc-bczRLJ bcJKaK"
                  >
                    Connection Event Details
                  </h3>
                  <dl
                    class="sc-gsnTZi iLOyRZ"
                  >
                    <dt
                      class="sc-dkzDqf kVNeuV"
                    >
                      AP MAC:
                    </dt>
                    <dd
                      class="sc-hKMtZM iWLUww"
                    >
                      94:B3:4F:3D:15:B0
                    </dd>
                    <dt
                      class="sc-dkzDqf kVNeuV"
                    >
                      AP Name:
                    </dt>
                    <dd
                      class="sc-hKMtZM iWLUww"
                    >
                      R750-11-112
                    </dd>
                    <dt
                      class="sc-dkzDqf kVNeuV"
                    >
                      SSID:
                    </dt>
                    <dd
                      class="sc-hKMtZM iWLUww"
                    />
                    <dt
                      class="sc-dkzDqf kVNeuV"
                    >
                      Radio:
                    </dt>
                    <dd
                      class="sc-hKMtZM iWLUww"
                    >
                      Unknown
                    </dd>
                  </dl>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </span>
  </div>
</DocumentFragment>
`;
